--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "@capacitor/ios": "^7.4.4",
+    "@capacitor/local-notifications": "^7.0.3",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@supabase/supabase-js": "^2.83.0",
     "clsx": "^2.1.1",
