--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "react-intersection-observer": "^10.0.0",
     "recharts": "^3.4.1",
     "sonner": "^2.0.7",
+    "swagger-ui-react": "^5.30.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/hast": "^3.0.4",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-ui-react": "^5.18.0",
+    "@types/unist": "^3.0.3",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
